# SillyEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  app  cmake_install.cmake  glad.c  imgui.ini  main.cpp
Sandbox/: SillyEditor.h
Sillitor/: CMakeLists.txt
Sillitor/src/: main.cpp
Silly/: CMakeLists.txt
Silly/src/: Engine.cpp  FileSystem.h  Framebuffer.cpp  Framebuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  KeyListener.cpp  KeyListener.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  ScreenResUtil.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  experimental_vertices_model_loader.cpp  experimental_vertices_model_loader.h
Silly/src/ECS/: ECS.cpp  ECS.h
Silly/src/components/: Camera.h
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
assets/shaders/: basic.fs  fragmentShader.vs  lightingShader.vs  screenFramebuffer.vs  vertexShader.vs
cmake/modules/: FindASSIMP.cmake
configuration/: assets_directory.h.in
core/: Engine.cpp  Engine.h  FileSystem.h  Framebuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.h  ScreenResUtil.h  Shader.cpp  Shader.h  Window.cpp  Window.h  experimental_vertices_model_loader.h  imgui.ini
core/components/: Camera.cpp  Camera.h
includes/freetype2/freetype/config/: ftoption.h
includes/glad/: glad.h
scenes/: SillyEditor.cpp
scripts/: build_windows.bat  build_xcode.sh
